--- a/microservice-a/src/main/resources/message_en.properties
+++ b/microservice-a/src/main/resources/message_en.properties
@@ -1,9 +1,4 @@
 0000=SUCCESSFUL
-1019=CREDENTIAL_INPUT_INCOMPLETE
-1001=INVALID DATA
-1002=LOW VALUE  
-1003=INVALID DATE TIME
-1020=INVALID CREDENTIAL
-1021=INVALID ACCOUNT NUMBER
-1023=TRANSACTION_NOT_FOUND
-1111=FATAL ERROR
+1001=Authority is exist
+1002=Authority is not exist
+1003=No User Found
